# examen_parcial_parte_1

./: CMakeLists.txt  README.md  main.cpp  main.h
parte 1/: identificacion.cpp  identificacion.h
parte 2/: dia_semanal.cpp  dia_semanal.h
parte 3/: calculo.cpp  calculo.h
parte 4/: promocion.cpp  promocion.h
